--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "start": "DATABASE_URL=postgresql://entangle_db_user:ClymtRzy5o5xeI3dNEJjDwU9BQUaED67@dpg-cq85i9mehbks738e85jg-a.oregon-postgres.render.com/entangle_db PORT=3000 node --loader ts-node/esm  --experimental-specifier-resolution=node ./src/main.ts",
+    "start:prod": "DATABASE_URL=postgresql://entangle_db_user:ClymtRzy5o5xeI3dNEJjDwU9BQUaED67@dpg-cq85i9mehbks738e85jg-a.oregon-postgres.render.com/entangle_db PORT=3000 node --loader ts-node/esm  --experimental-specifier-resolution=node ./src/main.ts",
+    "start:dev": "DATABASE_URL=postgresql://postgres:root@0.0.0.0:5433/entangle PORT=3000 node --loader ts-node/esm  --experimental-specifier-resolution=node ./src/main.ts",
     "build": "rm -rf ./dist && tsc",
     "serve": "node dist/index.js"
   },
   "dependencies": {
     "@rocicorp/rails": "0.8.1",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "nanoid": "^4.0.0",
+    "octokit": "^4.0.2",
     "replicache": "^14.2.2",
-    "replicache-transaction": "^0.3.3"
+    "replicache-transaction": "^0.3.3",
+    "uuid": "^10.0.0"
   },
   "author": "Vyapak Khare",
   "license": "MIT",
@@ -27,6 +31,7 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.6.4",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.18.0",
     "chai": "^4.3.6",
