--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Entangle Server",
   "type": "module",
-  "main": "index.ts",
+  "main": "main.ts",
   "scripts": {
-    "start:prod": "DATABASE_URL=postgresql://entangle_db_user:ClymtRzy5o5xeI3dNEJjDwU9BQUaED67@dpg-cq85i9mehbks738e85jg-a.oregon-postgres.render.com/entangle_db PORT=3000 node --loader ts-node/esm  --experimental-specifier-resolution=node ./src/main.ts",
+    "start:prod": "DATABASE_URL=postgres://alternate_entangle_server:6YTp6ykPTLvwaKR@alternate-entangle-server-db.flycast:5432/alternate_entangle_server?sslmode=disable PORT=3000 node dist/main.js",
     "start:dev": "DATABASE_URL=postgresql://postgres:root@0.0.0.0:5433/entangle PORT=3000 node --loader ts-node/esm  --experimental-specifier-resolution=node ./src/main.ts",
     "build": "rm -rf ./dist && tsc",
-    "serve": "node dist/index.js"
+    "serve": "node dist/main.js"
   },
   "dependencies": {
     "@rocicorp/rails": "0.8.1",
@@ -19,11 +19,15 @@
     "octokit": "^4.0.2",
     "replicache": "^14.2.2",
     "replicache-transaction": "^0.3.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "pg": ">=8.6.0",
+    "ts-node": "^10.9.2",
+    "zod": ">=3.17.3"
   },
   "author": "Vyapak Khare",
   "license": "MIT",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.8",
     "@rocicorp/eslint-config": "^0.1.2",
     "@rocicorp/prettier-config": "^0.1.1",
     "@types/chai": "^4.3.0",
@@ -36,14 +40,10 @@
     "@typescript-eslint/parser": "^5.18.0",
     "chai": "^4.3.6",
     "eslint": "^8.2.0",
-    "express": "^4.19.2",
     "mocha": "^9.2.1",
     "nodemon": "^2.0.19",
-    "pg": ">=8.6.0",
     "pg-mem": ">=2.5.0",
     "prettier": "^2.2.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "zod": ">=3.17.3"
+    "typescript": "^5.5.3"
   }
 }
